--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
             <!-- pad -->
             <div class="pad">
                 <div class="number">
-                    <button class="button-main">1</button>
-                    <button class="button-main">2</button>
-                    <button class="button-main">3</button>
-                    <button class="button-main">4</button>
-                    <button class="button-main">5</button>
-                    <button class="button-main">6</button>
-                    <button class="button-main">7</button>
-                    <button class="button-main">8</button>
-                    <button class="button-main">9</button>
-                    <button class="grow2">0</button>
-                    <button class="button-main">=</button>
+                        <button class="button-main">1</button>
+                        <button class="button-main">2</button>
+                        <button class="button-main">3</button>
+                        <button class="button-main">4</button>
+                        <button class="button-main">5</button>
+                        <button class="button-main">6</button>
+                        <button class="button-main">7</button>
+                        <button class="button-main">8</button>
+                        <button class="button-main">9</button>
+                        <button class="button-main grow2">0</button>
+                        <button class="button-main button-color">=</button>
                 </div>
                 <div class="option">
-                    <button class="button-secondary">C</button>
-                    <button class="button-secondary">+</button>
-                    <button class="button-secondary">-</button>
-                    <button class="button-secondary">x</button>
-                    <button class="button-secondary">÷</button>
+                        <button class="button-secondary button-color">C</button>
+                        <button class="button-secondary button-color2">+</button>
+                        <button class="button-secondary button-color2">-</button>
+                        <button class="button-secondary button-color2">x</button>
+                        <button class="button-secondary button-color2">÷</button>
                 </div>
             </div>
             <!-- /pad -->
